--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <androidx.cardview.widget.CardView
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <TextView
+            android:id="@+id/TextView_CurrentString"
+            android:textSize="32sp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/TextView_inTune"
+            android:textSize="24sp"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </androidx.cardview.widget.CardView>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
     <Button
+        android:layout_marginTop="24dp"
         android:id="@+id/D_String_Button"
         style="@style/stringButtons"
         android:layout_width="@dimen/button_dim_width"
         android:layout_height="@dimen/button_dim_height"
         android:layout_marginStart="24dp"
         android:text="@string/d_string"
-        android:layout_marginTop="24dp"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:layout_marginTop="16dp"
         android:id="@+id/A_String_Button"
         style="@style/stringButtons"
         android:layout_width="@dimen/button_dim_width"
         android:layout_height="@dimen/button_dim_height"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/a_string"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/D_String_Button" />
 
     <Button
-        android:layout_marginTop="16dp"
-        android:id="@+id/E_String_Button"
+        android:id="@+id/E_Low_String_Button"
         style="@style/stringButtons"
         android:layout_width="@dimen/button_dim_width"
         android:layout_height="@dimen/button_dim_height"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/e_String"
         android:textSize="24sp"
-        android:layout_marginStart="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/A_String_Button" />
 
+    <Button
+        android:layout_marginTop="24dp"
+        android:id="@+id/G_String_Button"
+        style="@style/stringButtons"
+        android:layout_width="@dimen/button_dim_height"
+        android:layout_height="@dimen/button_dim_width"
+        android:layout_marginEnd="24dp"
+        android:text="@string/g_String"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/B_String_Button"
+        style="@style/stringButtons"
+        android:layout_width="@dimen/button_dim_height"
+        android:layout_height="@dimen/button_dim_width"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:text="@string/b_String"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/G_String_Button"/>
+
+    <Button
+        android:id="@+id/E_High_String_Button"
+        style="@style/stringButtons"
+        android:layout_width="@dimen/button_dim_height"
+        android:layout_height="@dimen/button_dim_width"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:text="@string/e_String"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/B_String_Button"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageButton
+        android:onClick="record"
+        style="@style/recordButton"
+        android:layout_height="@dimen/button_dim_height"
+        android:layout_width="@dimen/button_dim_width"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"
+        />
+</LinearLayout>
