--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,15 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_weight="2"
+        app:cardBackgroundColor="@color/blue_gray_light"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
@@ -16,9 +19,11 @@
             android:textSize="32sp"
             android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"/>
 
         <TextView
+            android:textColor="@color/white"
             android:id="@+id/TextView_inTune"
             android:textSize="24sp"
             android:textAlignment="center"
@@ -29,8 +34,6 @@
     </androidx.cardview.widget.CardView>
 
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".MainActivity">
@@ -62,15 +65,16 @@
         app:layout_constraintTop_toBottomOf="@+id/D_String_Button" />
 
     <Button
-        android:onClick="setActiveGuitarString"
         android:id="@+id/E_Low_String_Button"
         style="@style/stringButtons"
         android:layout_width="@dimen/button_dim_width"
         android:layout_height="@dimen/button_dim_height"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:onClick="setActiveGuitarString"
         android:text="@string/e_String"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/A_String_Button" />
 
@@ -101,26 +105,31 @@
         app:layout_constraintTop_toBottomOf="@+id/G_String_Button"/>
 
     <Button
-        android:onClick="setActiveGuitarString"
         android:id="@+id/E_High_String_Button"
         style="@style/stringButtons"
         android:layout_width="@dimen/button_dim_height"
         android:layout_height="@dimen/button_dim_width"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
+        android:onClick="setActiveGuitarString"
         android:text="@string/e_String"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/B_String_Button"/>
+        app:layout_constraintTop_toBottomOf="@+id/B_String_Button" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        style="@style/recordButton"
+        android:layout_width="@dimen/button_dim_width"
+        android:layout_height="@dimen/button_dim_height"
+        android:layout_gravity="center_horizontal"
+        android:onClick="record"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageButton
-        android:onClick="record"
-        style="@style/recordButton"
-        android:layout_height="@dimen/button_dim_height"
-        android:layout_width="@dimen/button_dim_width"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"
-        />
 </LinearLayout>
