--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+
+    <color name = "blue_gray_dark">#102027</color>
+    <color name = "blue_gray_light">#62727b</color>
+    <color name = "blue_gray_primary">#37474f</color>
+
     <color name ="record_color_red">#ff0000</color>
 </resources>
