--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
             android:layout_marginTop="16dp"
             android:onClick="setActiveGuitarString"
             android:text="@string/d_string"
+            android:textColor="@drawable/text_color_button"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/imageButton"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +61,7 @@
             android:layout_marginTop="16dp"
             android:onClick="setActiveGuitarString"
             android:text="@string/a_string"
+            android:textColor="@drawable/text_color_button"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/E_Low_String_Button" />
@@ -73,6 +75,7 @@
             android:layout_marginTop="24dp"
             android:onClick="setActiveGuitarString"
             android:text="@string/e_String"
+            android:textColor="@drawable/text_color_button"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -86,6 +89,7 @@
             android:layout_marginEnd="24dp"
             android:onClick="setActiveGuitarString"
             android:text="@string/g_String"
+            android:textColor="@drawable/text_color_button"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -99,6 +103,7 @@
             android:layout_marginEnd="24dp"
             android:onClick="setActiveGuitarString"
             android:text="@string/b_String"
+            android:textColor="@drawable/text_color_button"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/G_String_Button" />
@@ -112,6 +117,7 @@
             android:layout_marginEnd="24dp"
             android:onClick="setActiveGuitarString"
             android:text="@string/e_String"
+            android:textColor="@drawable/text_color_button"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/imageButton"
             app:layout_constraintEnd_toEndOf="parent"
