--- a/app/src/main/res/drawable/record_button_activated.xml
+++ b/app/src/main/res/drawable/record_button_activated.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/record_button_press_background" android:state_activated="true" />
-    <item android:drawable="@drawable/record_button_background" />
-</selector>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid
+        android:color="@color/record_color_red"/>
+</shape>
+
