--- a/app/src/main/res/drawable/string_button_idle.xml
+++ b/app/src/main/res/drawable/string_button_idle.xml
@@ -2,6 +2,10 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
+    <stroke
+        android:width="2dp"
+        android:color="@color/white" />
     <solid
-        android:color="@color/record_color_red"/>
+        android:color="#00ffffff"
+        />
 </shape>
