--- a/app/src/main/res/drawable/string_button_selected.xml
+++ b/app/src/main/res/drawable/string_button_selected.xml
@@ -3,5 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="@color/blue_gray_dark"/>
+        android:color="@color/white"
+        />
 </shape>
