--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,37 +7,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        app:cardBackgroundColor="@color/blue_gray_light">
-
-        <TextView
-            android:id="@+id/TextView_CurrentString"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="32sp" />
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/TextView_inTune"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:background="@color/blue_gray_light"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="24sp" />
 
-    </androidx.cardview.widget.CardView>
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/graphView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/TextView_inTune" />
+
+    </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
         tools:context=".MainActivity">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/D_String_Button"
             style="@style/stringButtons"
             android:layout_width="@dimen/button_dim_width"
@@ -52,7 +50,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/A_String_Button" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/A_String_Button"
             style="@style/stringButtons"
             android:layout_width="@dimen/button_dim_width"
@@ -66,7 +64,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/E_Low_String_Button" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/E_Low_String_Button"
             style="@style/stringButtons"
             android:layout_width="@dimen/button_dim_width"
@@ -80,7 +78,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/G_String_Button"
             style="@style/stringButtons"
             android:layout_width="@dimen/button_dim_height"
@@ -94,7 +92,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/B_String_Button"
             style="@style/stringButtons"
             android:layout_width="@dimen/button_dim_height"
@@ -108,7 +106,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/G_String_Button" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/E_High_String_Button"
             style="@style/stringButtons"
             android:layout_width="@dimen/button_dim_height"
