--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@color/black">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@color/black"
+            android:max="10"
+            android:progressDrawable="@drawable/progress_bar" />
+
 
         <TextView
             android:id="@+id/TextView_inTune"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blue_gray_light"
+            android:layout_below="@id/progress_bar"
+            android:background="@color/black"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="24sp" />
